refactor: address code smells and complete code coverage