@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -60,6 +59,6 @@ public class ExpensePipelineService {
             // --------------------------------------------------
             
             return entity.getId();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 }
